objects/A1__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <required>true</required>
        <scale>1</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <description>F3</description>
        <label>F3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F6_New__c</fullName>
        <label>F6 New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <type>Email</type>
    </fields>
    <label>A1</label>
    <nameField>
        <label>A1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>